Cleaned up code styles

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 				<p><strong>Bold content within body</strong></p>
 				<p>The children groped their way back to the spring. The weary time dragged on; they slept again, and awoke famished and woe-stricken. <a href="#">Tom believed it must be Tuesday</a> by this time.</p>
 				<p class="u-text-small">Meta content</p>
+				<h3>Code</h3>
+				<p>Primary buttons should have a class of <code>c-button--primary</code> added.</p>
+				<pre class="c-container--grey"><div class="o-box o-box--small"><code>.c-button--primary {
+  background-color: $color-primary;
+}</code></div></pre>
 			</div>
 			<div class="o-box">
 				<h2>Buttons</h2>
