#1 Added toggle switch component

--- a/index.html
+++ b/index.html
@@ -293,6 +293,34 @@
 						</fieldset>
 					</div>
 					<div class="c-field">
+						<label class="c-switch">
+							<input type="checkbox" class="c-switch__input u-sr-only">
+							<span class="c-switch__slider"></span>
+							<span class="c-switch__label">Two-factor authentication</span>
+						</label>
+					</div>
+					<div class="c-field">
+						<fieldset class="c-choice-list">
+							<legend class="c-field__label">Notifications</legend>
+							<ul class="o-list-bare c-choice-list__choices">
+								<li class="c-choice-list__item">
+									<label class="c-switch">
+										<input type="checkbox" class="c-switch__input u-sr-only" checked>
+										<span class="c-switch__slider"></span>
+										<span class="c-switch__label">Security alerts</span>
+									</label>
+								</li>
+								<li class="c-choice-list__item">
+									<label class="c-switch">
+										<input type="checkbox" class="c-switch__input u-sr-only">
+										<span class="c-switch__slider"></span>
+										<span class="c-switch__label">Product releases</span>
+									</label>
+								</li>
+							</ul>
+						</fieldset>
+					</div>
+					<div class="c-field">
 						<label class="c-select">
 							<span class="c-field__label">Contact Method</span>
 							<select class="c-select__input">
