#15 Renamed link list component to list link

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 							</button>
 							<div class="o-container o-container--xxs c-dropdown c-dropdown--right">
 								<ul class="o-list-bare">
-									<li><a href="#" class="c-link-list">Profile</a></li>
-									<li><a href="#" class="c-link-list">Security</a></li>
-									<li><a href="#" class="c-link-list c-link-list--separated">Sign Out</a></li>
+									<li><a href="#" class="c-list-link">Profile</a></li>
+									<li><a href="#" class="c-list-link">Security</a></li>
+									<li><a href="#" class="c-list-link c-list-link--separated">Sign Out</a></li>
 								</ul>
 							</div>
 						</li>
