#16 Cleaned up navigation classnames and styles

--- a/index.html
+++ b/index.html
@@ -11,25 +11,24 @@
 		<main id="content">
 			<header>
 				<nav class="c-nav-bar">
-					<img src="images/logos/reflectivity-logo.svg" alt="Reflectivity logo" width="22" height="32" class="c-site-logo">
+					<img src="images/logos/reflectivity-logo.svg" alt="Reflectivity logo" width="22" height="32" class="c-nav-bar__logo">
 					<ul class="o-list-bare o-list-inline u-pull-left">
 						<li class="o-list-inline__item">
-							<a class="c-primary-nav-link" href="#">Elements</a>
+							<a class="c-nav-bar__link" href="#">Elements</a>
 						</li>
 						<li class="o-list-inline__item">
-							<a class="c-primary-nav-link" href="#">Objects</a>
+							<a class="c-nav-bar__link" href="#">Objects</a>
 						</li>
 						<li class="o-list-inline__item">
-							<a class="c-primary-nav-link is-selected" href="#">Components</a>
+							<a class="c-nav-bar__link is-selected" href="#">Components</a>
 						</li>
 						<li class="o-list-inline__item">
-							<a class="c-primary-nav-link" href="#">Utilities</a>
+							<a class="c-nav-bar__link" href="#">Utilities</a>
 						</li>
 					</ul>
 					<ul class="o-list-bare o-list-inline u-pull-right">
 						<li class="o-list-inline__item u-relative">
-							<button class="o-button-bare c-primary-nav-link js-dropdown" href="#">
-								<img src="images/icons/bell-ko.svg" width="16" height="16" alt="" class="c-primary-nav-link__icon">
+							<button class="o-button-bare c-nav-bar__link c-nav-bar__link--notifications js-dropdown">
 								<span class="u-sr-only">No unread notifications</span>
 							</button>
 							<div class="o-container o-container--xs c-dropdown c-dropdown--right">
@@ -40,10 +39,10 @@
 							</div>
 						</li>
 						<li class="o-list-inline__item">
-							<a class="c-primary-nav-link" href="#">Help</a>
+							<a class="c-nav-bar__link" href="#">Help</a>
 						</li>
 						<li class="o-list-inline__item u-relative">
-							<button class="o-button-bare c-button--dropdown c-primary-nav-link js-dropdown">
+							<button class="o-button-bare c-button--dropdown c-nav-bar__link js-dropdown">
 								<span class="u-text-truncate">Carolyn Chapman</span>
 							</button>
 							<div class="o-container o-container--xxs c-dropdown c-dropdown--right">
@@ -470,15 +469,15 @@
 			<div class="o-box">
 				<nav class="c-pagination">
 					<ul class="o-list-bare c-pagination__list u-text-center">
-						<li class="c-pagination__item c-pagination__item--previous"><button href="#" class="o-button-bare c-pagination__link">&larr;<span class="u-sr-only"> Previous page</span></button></li>
-						<li class="c-pagination__item is-selected"><button href="#" class="o-button-bare c-pagination__link"><span class="u-sr-only">Page </span>1</button></li>
-						<li class="c-pagination__item"><button href="#" class="o-button-bare c-pagination__link"><span class="u-sr-only">Page </span>2</button></li>
-						<li class="c-pagination__item"><button href="#" class="o-button-bare c-pagination__link"><span class="u-sr-only">Page </span>3</button></li>
+						<li class="c-pagination__item c-pagination__item--previous"><button class="o-button-bare c-pagination__link">&larr;<span class="u-sr-only"> Previous page</span></button></li>
+						<li class="c-pagination__item is-selected"><button class="o-button-bare c-pagination__link"><span class="u-sr-only">Page </span>1</button></li>
+						<li class="c-pagination__item"><button class="o-button-bare c-pagination__link"><span class="u-sr-only">Page </span>2</button></li>
+						<li class="c-pagination__item"><button class="o-button-bare c-pagination__link"><span class="u-sr-only">Page </span>3</button></li>
 						<li class="c-pagination__item">&#8230;</li>
-						<li class="c-pagination__item"><button href="#" class="o-button-bare c-pagination__link"><span class="u-sr-only">Page </span>7</button></li>
-						<li class="c-pagination__item"><button href="#" class="o-button-bare c-pagination__link"><span class="u-sr-only">Page </span>8</button></li>
-						<li class="c-pagination__item"><button href="#" class="o-button-bare c-pagination__link"><span class="u-sr-only">Page </span>9</button></li>
-						<li class="c-pagination__item c-pagination__item--next"><button href="#" class="o-button-bare c-pagination__link">&rarr;<span class="u-sr-only"> Next page</span></button></li>
+						<li class="c-pagination__item"><button class="o-button-bare c-pagination__link"><span class="u-sr-only">Page </span>7</button></li>
+						<li class="c-pagination__item"><button class="o-button-bare c-pagination__link"><span class="u-sr-only">Page </span>8</button></li>
+						<li class="c-pagination__item"><button class="o-button-bare c-pagination__link"><span class="u-sr-only">Page </span>9</button></li>
+						<li class="c-pagination__item c-pagination__item--next"><button class="o-button-bare c-pagination__link">&rarr;<span class="u-sr-only"> Next page</span></button></li>
 					</ul>
 				</nav>
 			</div>
