#20 Added tooltip component

--- a/index.html
+++ b/index.html
@@ -256,6 +256,33 @@
 				</div>
 			</div>
 			<div class="o-box u-border-bottom">
+				<h2>Tooltip</h2>
+				<div class="u-relative u-inline-block">
+					<div class="c-tooltip js-tooltip" data-position="top">
+						The children groped their way back to the spring.
+					</div>
+					<button class="c-button">Hover to Reveal Top</button>
+				</div>
+				<div class="u-relative u-inline-block">
+					<div class="c-tooltip js-tooltip" data-position="right">
+						The children groped their way back to the spring.
+					</div>
+					<button class="c-button">Hover to Reveal Right</button>
+				</div>
+				<div class="u-relative u-inline-block">
+					<div class="c-tooltip js-tooltip" data-position="bottom">
+						The children groped their way back to the spring.
+					</div>
+					<button class="c-button">Hover to Reveal Bottom</button>
+				</div>
+				<div class="u-relative u-inline-block">
+					<div class="c-tooltip js-tooltip" data-position="left">
+						The children groped their way back to the spring.
+					</div>
+					<button class="c-button">Hover to Reveal Left</button>
+				</div>
+			</div>
+			<div class="o-box u-border-bottom">
 				<h2>Inputs</h2>
 				<form>
 					<div class="c-field">
