#27 Cleaned up table styles

--- a/index.html
+++ b/index.html
@@ -470,20 +470,56 @@
 				<h2>Tables</h2>
 			</div>
 			<div class="o-container--responsive">
-				<table>
+				<table class="c-table--striped">
 					<thead>
 						<tr>
+							<th class="c-table__column--sortable">#</th>
 							<th class="c-table__column--sortable">First Name</th>
 							<th class="c-table__column--sortable">Last Name <img src="images/sort-asc.svg" alt="" width="9" height="5"></th>
-							<th class="c-table__column--sortable">Email Address</th>
+							<th>Email Address</th>
+							<th>Phone Number</th>
 							<th>Contact Method</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
+							<th>1</th>
+							<td>Amy</td>
+							<td>Brooks</td>
+							<td>amybrooks@gmail.com</td>
+							<td>(586) 832 6954</td>
+							<td>Email</td>
+						</tr>
+						<tr>
+							<th>2</th>
 							<td>Carolyn</td>
 							<td>Chapman</td>
 							<td>c.chapman@sterlingindustries.com</td>
+							<td>(908) 103 8288</td>
+							<td>Phone</td>
+						</tr>
+						<tr>
+							<th>3</th>
+							<td>Rachel</td>
+							<td>Fowler</td>
+							<td>rfowler@tempagency.com</td>
+							<td>(704) 918 8233</td>
+							<td>Email</td>
+						</tr>
+						<tr>
+							<th>4</th>
+							<td>Christian</td>
+							<td>Henry</td>
+							<td>christian.henry@gmail.com</td>
+							<td></td>
+							<td>Email</td>
+						</tr>
+						<tr>
+							<th>5</th>
+							<td>Douglas</td>
+							<td>Warren</td>
+							<td>douglas82@gmail.com</td>
+							<td>(635) 286 1093</td>
 							<td>Email</td>
 						</tr>
 					</tbody>
