#26 Use popper.js to position dropdowns

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 						</li>
 					</ul>
 					<ul class="o-list-bare o-list-inline u-pull-right">
-						<li class="o-list-inline__item u-relative">
+						<li class="o-list-inline__item">
 							<button class="o-button-bare c-nav-bar__link c-nav-bar__link--notifications js-dropdown">
 								<span class="u-sr-only">No unread notifications</span>
 							</button>
-							<div class="o-container o-container--xs c-dropdown c-dropdown--right">
+							<div class="o-container o-container--xs c-dropdown" data-position="bottom-end">
 								<div class="o-box">
 									<h2 class="c-h6">Notifications</h2>
 									<p>You're up to date! 🎉</p>
@@ -41,11 +41,11 @@
 						<li class="o-list-inline__item">
 							<a class="c-nav-bar__link" href="#">Help</a>
 						</li>
-						<li class="o-list-inline__item u-relative">
+						<li class="o-list-inline__item">
 							<button class="o-button-bare c-button--dropdown c-nav-bar__link js-dropdown">
 								<span class="u-text-truncate">Carolyn Chapman</span>
 							</button>
-							<div class="o-container o-container--xxs c-dropdown c-dropdown--right">
+							<div class="o-container o-container--xxs c-dropdown" data-position="bottom-end">
 								<ul class="o-list-bare">
 									<li><a href="#" class="c-list-link">Profile</a></li>
 									<li><a href="#" class="c-list-link">Security</a></li>
@@ -252,12 +252,10 @@
 			</div>
 			<div class="o-box u-border-bottom">
 				<h2>Dropdown</h2>
-				<div class="u-relative">
-					<button class="c-button c-button--dropdown js-dropdown">Toggle Dropdown</button>
-					<div class="o-container o-container--xs c-dropdown">
-						<div class="o-box">
-							<p>The children groped their way back to the spring. The weary time dragged on; they slept again, and awoke famished and woe-stricken. <a href="#">Tom believed it must be Tuesday</a> by this time.</p>
-						</div>
+				<button class="c-button c-button--dropdown js-dropdown">Toggle Dropdown</button>
+				<div class="o-container o-container--xs c-dropdown">
+					<div class="o-box">
+						<p>The children groped their way back to the spring. The weary time dragged on; they slept again, and awoke famished and woe-stricken. <a href="#">Tom believed it must be Tuesday</a> by this time.</p>
 					</div>
 				</div>
 			</div>
