#34 Close dropdown when clicking outside of dropdown

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					</ul>
 					<ul class="o-list-bare o-list-inline u-pull-right">
 						<li class="o-list-inline__item">
-							<button class="o-button-bare c-nav-bar__link c-nav-bar__link--notifications js-dropdown">
+							<button class="o-button-bare c-nav-bar__link c-nav-bar__link--notifications">
 								<span class="u-sr-only">No unread notifications</span>
 							</button>
 							<div class="o-container o-container--xs c-dropdown" data-position="bottom-end">
@@ -42,7 +42,7 @@
 							<a class="c-nav-bar__link" href="#">Help</a>
 						</li>
 						<li class="o-list-inline__item">
-							<button class="o-button-bare c-button--dropdown c-nav-bar__link js-dropdown">
+							<button class="o-button-bare c-button--dropdown c-nav-bar__link">
 								<span class="u-text-truncate">Carolyn Chapman</span>
 							</button>
 							<div class="o-container o-container--xxs c-dropdown" data-position="bottom-end">
@@ -252,7 +252,7 @@
 			</div>
 			<div class="o-box u-border-bottom">
 				<h2>Dropdown</h2>
-				<button class="c-button c-button--dropdown js-dropdown">Toggle Dropdown</button>
+				<button class="c-button c-button--dropdown">Toggle Dropdown</button>
 				<div class="o-container o-container--xs c-dropdown">
 					<div class="o-box">
 						<p>The children groped their way back to the spring. The weary time dragged on; they slept again, and awoke famished and woe-stricken. <a href="#">Tom believed it must be Tuesday</a> by this time.</p>
@@ -271,9 +271,9 @@
 			<div class="o-box u-border-bottom">
 				<h2>Tooltip</h2>
 				<div class="c-button-bar">
-					<button class="c-button js-tooltip" data-tooltip="The children groped their way back to the spring." data-tooltip-position="top-start">Hover to Reveal Top</button>
-					<button class="c-button js-tooltip" data-tooltip="The children groped their way back to the spring.">Hover to Reveal Bottom</button>
-					<button class="c-button js-tooltip" data-tooltip="The children groped their way back to the spring."  data-tooltip-position="right">Hover to Reveal Right</button>
+					<button class="c-button" data-tooltip="The children groped their way back to the spring." data-tooltip-position="top-start">Hover to Reveal Top</button>
+					<button class="c-button" data-tooltip="The children groped their way back to the spring.">Hover to Reveal Bottom</button>
+					<button class="c-button" data-tooltip="The children groped their way back to the spring." data-tooltip-position="right">Hover to Reveal Right</button>
 				</div>
 			</div>
 			<div class="o-box u-border-bottom">
