--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 				<h2>Tooltip</h2>
 				<div class="c-button-bar">
 					<button class="c-button" data-tooltip="The children groped their way back to the spring." data-tooltip-position="top-start">Hover to Reveal Top</button>
-					<button class="c-button" data-tooltip="The children groped their way back to the spring.">Hover to Reveal Bottom</button>
+					<button class="c-button" data-tooltip="Tom believed it must be Tuesday.">Hover to Reveal Bottom</button>
 					<button class="c-button" data-tooltip="The children groped their way back to the spring." data-tooltip-position="right">Hover to Reveal Right</button>
 				</div>
 			</div>
