#45 Added table ruled class for adding borders

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 				<h2>Tables</h2>
 			</div>
 			<div class="o-container--responsive">
-				<table class="c-table--striped">
+				<table class="c-table--ruled">
 					<thead>
 						<tr>
 							<th class="c-table__column--sortable">#</th>
