#37 Added loading state to buttons

--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
 					<input type="reset" value="Reset" class="c-button c-button--link c-button--danger" disabled>
 				</div>
 			</div>
+			<div class="o-box">
+				<div class="c-button-bar">
+					<button class="c-button c-button--primary is-loading" disabled>Loading...</button>
+					<button class="c-button is-loading" disabled>Loading...</button>
+					<button class="c-button c-button--danger is-loading" disabled>Deleting...</button>
+					<button class="c-button c-button--link is-loading" disabled>Link Button</button>
+				</div>
+			</div>
 			<div class="o-box u-border-bottom">
 				<button class="c-button c-button--primary c-button--full-width">Full Width Button</button>
 			</div>
